Crash picking colors in geometry nodesockets #86373

Closed
opened 2021-03-07 23:15:15 +01:00 by Clóvis · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-05 06:10, hash: b5d154f400
Worked: (newest version of Blender that worked as expected)

Short description of error
I was following this tutorial: https://www.youtube.com/watch?v=g7EGSCo1YBI
when i was reproducing the steps at 18:50 adding an atribute fill node and change the type to color, when i click the square to change the color value, blender crashes to desktop.
Exact steps for others to reproduce the error

with blender open, add geometry nodes to the default cube;
split screen and change to geometry node editor;
add atribute fill node, change attribute fill node type from float to color;
click on the rounded square by the value to change the color. it made my blender crash.
bug report.blend
[Based on the default startup or an attached .blend file (as simple as possible)]

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1660 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.40 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-05 06:10, hash: `b5d154f400` Worked: (newest version of Blender that worked as expected) **Short description of error** I was following this tutorial: https://www.youtube.com/watch?v=g7EGSCo1YBI when i was reproducing the steps at 18:50 adding an atribute fill node and change the type to color, when i click the square to change the color value, blender crashes to desktop. **Exact steps for others to reproduce the error** with blender open, add geometry nodes to the default cube; split screen and change to geometry node editor; add atribute fill node, change attribute fill node type from float to color; click on the rounded square by the value to change the color. it made my blender crash. [bug report.blend](https://archive.blender.org/developer/F9878037/bug_report.blend) [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @Clovis

Added subscriber: @Clovis
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-03-08 11:40:49 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check

This issue was referenced by 9ba1ff1c63

This issue was referenced by 9ba1ff1c6322cbacaaf7fad057cc507673dcd92d
Member

Will set to high prio since you cannot pick colors in a couple of nodes now

Will set to high prio since you cannot pick colors in a couple of nodes now
Philipp Oeser changed title from Crash using attribute fill node to Crash picking colors in geometry nodesockets 2021-03-08 13:41:32 +01:00
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#86373
No description provided.