source/blender/editors/space_node/drawnode.c
@@ -3385,7 +3385,12 @@ static void std_node_socket_draw(
         }
       }
       break;
-    case SOCK_RGBA:
+    case SOCK_RGBA: {
+      uiLayout *row = uiLayoutSplit(layout, 0.5f, false);
+      uiItemL(row, text, 0);
+      uiItemR(row, ptr, "default_value", DEFAULT_FLAGS, "", 0);
+      break;
+    }
     case SOCK_STRING: {
       uiLayout *row = uiLayoutSplit(layout, 0.5f, false);
       uiItemL(row, text, 0);
